--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -5,6 +5,8 @@ bind-key C-a send-prefix
 set-option -s escape-time 0
 set-option -ga terminal-overrides ",alacritty:Tc"
 
+setw -g mode-keys vi
+
 bind -n M-1 select-window -t 0
 bind -n M-2 select-window -t 1
 bind -n M-3 select-window -t 2
@@ -24,15 +26,20 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+bind -n M-p previous-window
+bind -n M-n next-window 
+
 bind -n M-r source-file ~/.config/tmux/tmux.conf
 
 bind -n M-t new-window 
 bind -n M-q detach 
 
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.local/share/tmux/plugins"
+
 if "test ! -d ~/.local/share/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.local/share/tmux/plugins/tpm && ~/.local/share/tmux/plugins/tpm/bin/install_plugins'"
 
-set -g @plugin 'jschillem/kanagawa-tmux'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jschillem/kanagawa-tmux'
 
 run '~/.local/share/tmux/plugins/tpm/tpm'
