updated tmux status bar

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -42,4 +42,7 @@ if "test ! -d ~/.local/share/tmux/plugins/tpm" \
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'jschillem/kanagawa-tmux'
 
+set -g @kanagawa_left_separator "█"
+set -g @kanagawa_right_separator "█"
+
 run '~/.local/share/tmux/plugins/tpm/tpm'
