update hypr config

--- a/modules/hypr/hyprland.conf
+++ b/modules/hypr/hyprland.conf
@@ -15,8 +15,8 @@ decoration {
 }
 
 input {
+    follow_mouse = 0
     kb_options = ctrl:nocaps
-    numlock_by_default = true
 }
 
 dwindle {
@@ -25,10 +25,6 @@ dwindle {
 
 misc {
     disable_hyprland_logo = true
-}
-
-xwayland {
-  force_zero_scaling = true
 }
 
 windowrulev2 = workspace 2 silent, class:(firefox)
