--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -29,6 +29,9 @@ bind -n M-l select-pane -R
 bind -n M-p previous-window
 bind -n M-n next-window 
 
+bind -n M-\- resize-pane -L 5
+bind -n M-\= resize-pane -R 5
+
 bind -n M-r source-file ~/.config/tmux/tmux.conf
 
 bind -n M-t new-window 
