tweak: tmux config

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -31,6 +31,7 @@ bind -n M-n next-window
 
 bind -n M-\- resize-pane -L 5
 bind -n M-\= resize-pane -R 5
+bind -n M-m resize-pane -Z
 
 bind -n M-r source-file ~/.config/tmux/tmux.conf
 
@@ -43,9 +44,10 @@ if "test ! -d ~/.local/share/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.local/share/tmux/plugins/tpm && ~/.local/share/tmux/plugins/tpm/bin/install_plugins'"
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'jschillem/kanagawa-tmux'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
-set -g @kanagawa_left_separator "█"
-set -g @kanagawa_right_separator "█"
+set -g @tokyo-night-tmux_show_git 0
+set -g @tokyo-night-tmux_show_battery_widget 1
+set -g @tokyo-night-tmux_battery_name "BAT0"
 
 run '~/.local/share/tmux/plugins/tpm/tpm'
