feat: switch statusline to kanagawa

--- a/modules/tmux/tmux.conf
+++ b/modules/tmux/tmux.conf
@@ -44,10 +44,13 @@ if "test ! -d ~/.local/share/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.local/share/tmux/plugins/tpm && ~/.local/share/tmux/plugins/tpm/bin/install_plugins'"
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'Nybkox/tmux-kanagawa'
 
-set -g @tokyo-night-tmux_show_git 0
-set -g @tokyo-night-tmux_show_battery_widget 1
-set -g @tokyo-night-tmux_battery_name "BAT0"
+set -g @kanagawa-plugins "time battery"
+set -g @kanagawa-show-powerline true
+set -g @kanagawa-ignore-window-colors true
+set -g @kanagawa-time-format "%F %R"
+
+set -g @kanagawa-battery-colors "green dark_gray"
 
 run '~/.local/share/tmux/plugins/tpm/tpm'
