hyprland: add new binds

--- a/modules/hypr/hyprland.conf
+++ b/modules/hypr/hyprland.conf
@@ -49,6 +49,7 @@ bind = $mod SHIFT, K, movewindow, u
 bind = $mod SHIFT, L, movewindow, r
 
 # Floating Window Binds
+bind = $mod, N, togglefloating
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 
